Ajustes - Cad Musica e Tela Principal
Inclusão do de musicas no menu.
Troca de tipo de item para genero e artista da tela de Cadastro de Musica.

--- a/src/albunsfx/TelaPrincipal.fxml
+++ b/src/albunsfx/TelaPrincipal.fxml
@@ -14,7 +14,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFDFCE;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="albunsfx.TelaPrincipalController">
    <top>
-      <VBox prefHeight="58.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="121.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
             <MenuBar>
               <menus>
@@ -22,6 +22,7 @@
                   <items>
                     <MenuItem mnemonicParsing="false" onAction="#clkCadArtista" text="Artista" />
                     <MenuItem mnemonicParsing="false" onAction="#clkCadGenero" text="Gênero" />
+                        <MenuItem mnemonicParsing="false" onAction="#clkCadMusica" text="Músicas" />
                     <MenuItem mnemonicParsing="false" onAction="#clkCadTipoArtista" text="Tipo de Artista" />
                         <MenuItem mnemonicParsing="false" onAction="#clkFechar" text="Fechar" />
                   </items>
@@ -39,24 +40,32 @@
                 </Menu>
               </menus>
             </MenuBar>
-            <ToolBar maxHeight="80.0" minHeight="80.0" prefHeight="80.0" prefWidth="200.0" style="-fx-background-color: #C4525A;">
+            <ToolBar maxHeight="328.0" minHeight="80.0" prefHeight="96.0" prefWidth="485.0" style="-fx-background-color: #C4525A;">
               <items>
-                <Button mnemonicParsing="false" onAction="#clkCadArtista" prefHeight="48.0" prefWidth="64.0" style="-fx-background-color: #47313B;" text="Artistas" textFill="WHITE">
+                <Button mnemonicParsing="false" onAction="#clkCadArtista" prefHeight="57.0" prefWidth="64.0" style="-fx-background-color: #47313B;" text="Artistas" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                 </Button>
-                <Button mnemonicParsing="false" onAction="#clkCadGenero" prefHeight="48.0" prefWidth="64.0" style="-fx-background-color: #47313B;" text="Gêneros" textFill="WHITE">
+                <Button mnemonicParsing="false" onAction="#clkCadGenero" prefHeight="56.0" prefWidth="64.0" style="-fx-background-color: #47313B;" text="Gêneros" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                 </Button>
-                <Button mnemonicParsing="false" onAction="#clkCadTipoArtista" prefHeight="48.0" prefWidth="64.0" style="-fx-background-color: #47313B;" text="Tipos de Artista" textFill="WHITE">
+                  <Button mnemonicParsing="false" onAction="#clkCadTipoArtista" prefHeight="56.0" prefWidth="64.0" style="-fx-background-color: #47313B;" text="Músicas" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
-                </Button>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#clkCadTipoArtista" prefHeight="56.0" prefWidth="64.0" style="-fx-background-color: #47313B;" text="Tipos de Artista" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
               </items>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
             </ToolBar>
          </children>
       </VBox>
