--- a/src/albunsfx/CadAlbum.fxml
+++ b/src/albunsfx/CadAlbum.fxml
@@ -14,17 +14,17 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="546.0" prefWidth="866.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="546.0" prefWidth="866.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="albunsfx.CadAlbumController">
    <top>
       <VBox prefHeight="308.0" prefWidth="856.0" BorderPane.alignment="CENTER">
          <children>
             <HBox alignment="CENTER" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" prefWidth="696.0" spacing="20.0" style="-fx-background-color: #DDDDDD;">
                <children>
-                  <Button fx:id="btnovo1" mnemonicParsing="false" onAction="#clkBtNovo" prefWidth="80.0" text="Novo" />
-                  <Button fx:id="btalterar1" layoutX="318.0" layoutY="23.0" mnemonicParsing="false" onAction="#clkBtAlterar" prefWidth="80.0" text="Alterar" />
-                  <Button fx:id="btapagar1" layoutX="358.0" layoutY="23.0" mnemonicParsing="false" onAction="#clkBtApagar" prefWidth="80.0" text="Apagar" />
-                  <Button fx:id="btconfirmar1" layoutX="398.0" layoutY="23.0" mnemonicParsing="false" onAction="#clkBtConfirmar" prefWidth="80.0" text="Confirmar" />
-                  <Button fx:id="btcancelar1" layoutX="438.0" layoutY="23.0" mnemonicParsing="false" onAction="#clkBtCancelar" prefWidth="80.0" text="Cancelar" />
+                  <Button fx:id="btnovo" mnemonicParsing="false" onAction="#clkBtNovo" prefWidth="80.0" text="Novo" />
+                  <Button fx:id="btalterar" layoutX="318.0" layoutY="23.0" mnemonicParsing="false" onAction="#clkBtAlterar" prefWidth="80.0" text="Alterar" />
+                  <Button fx:id="btapagar" layoutX="358.0" layoutY="23.0" mnemonicParsing="false" onAction="#clkBtApagar" prefWidth="80.0" text="Apagar" />
+                  <Button fx:id="btconfirmar" layoutX="398.0" layoutY="23.0" mnemonicParsing="false" onAction="#clkBtConfirmar" prefWidth="80.0" text="Confirmar" />
+                  <Button fx:id="btcancelar" layoutX="438.0" layoutY="23.0" mnemonicParsing="false" onAction="#clkBtCancelar" prefWidth="80.0" text="Cancelar" />
                </children>
             </HBox>
             <AnchorPane fx:id="pndados" minHeight="200.0" prefHeight="214.0" prefWidth="856.0" style="-fx-background-color: white;">
@@ -36,16 +36,16 @@
                         <Image url="@../images/album.png" />
                      </image>
                   </ImageView>
-                  <JFXComboBox fx:id="cbartista" labelFloat="true" layoutX="359.0" layoutY="65.0" prefHeight="25.0" prefWidth="311.0" promptText="RATTING ARRUMAR" />
+                  <JFXTextField fx:id="txratting" labelFloat="true" layoutX="359.0" layoutY="65.0" prefHeight="25.0" prefWidth="311.0" promptText="Ratting" />
                   <JFXComboBox fx:id="cbartista" labelFloat="true" layoutX="358.0" layoutY="107.0" prefHeight="25.0" prefWidth="313.0" promptText="Artista" />
-                  <JFXComboBox fx:id="cbgenero1" labelFloat="true" layoutX="27.0" layoutY="107.0" prefHeight="25.0" prefWidth="314.0" promptText="Gênero-Id" />
+                  <JFXComboBox fx:id="cbgenero" labelFloat="true" layoutX="27.0" layoutY="107.0" prefHeight="25.0" prefWidth="314.0" promptText="Gênero" />
                   <JFXTextField fx:id="txano" labelFloat="true" layoutX="27.0" layoutY="65.0" prefHeight="25.0" prefWidth="321.0" promptText="Ano" />
                   <JFXTextField fx:id="txtitulo" layoutX="199.0" layoutY="25.0" prefHeight="25.0" prefWidth="471.0" promptText="Título" />
                </children>
             </AnchorPane>
-            <HBox fx:id="pnpesquisa1" alignment="CENTER" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" prefWidth="200.0" spacing="10.0" style="-fx-background-color: #DDDDDD;">
+            <HBox fx:id="pnpesquisa" alignment="CENTER" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" prefWidth="200.0" spacing="10.0" style="-fx-background-color: #DDDDDD;">
                <children>
-                  <JFXTextField fx:id="txbusca1" prefHeight="25.0" prefWidth="525.0" promptText="Digite aqui uma chave de busca" />
+                  <JFXTextField fx:id="txbusca" prefHeight="25.0" prefWidth="525.0" promptText="Digite aqui uma chave de busca" />
                   <Button fx:id="btbuscar" mnemonicParsing="false" onAction="#clkBtBuscar" style="-fx-background-color: white;" text="buscar" />
                </children>
             </HBox>
@@ -53,10 +53,11 @@
       </VBox>
    </top>
    <center>
-      <TableView prefHeight="173.0" prefWidth="856.0" BorderPane.alignment="CENTER">
+      <TableView fx:id="tabela" onMouseClicked="#clkTabela" prefHeight="173.0" prefWidth="856.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
+          <TableColumn fx:id="colid" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" text="id" />
+          <TableColumn fx:id="coltitulo" prefWidth="75.0" text="titulo" />
+          <TableColumn fx:id="colartista" prefWidth="75.0" text="artista" />
         </columns>
       </TableView>
    </center>
