--- a/src/albunsfx/TelaPrincipal.fxml
+++ b/src/albunsfx/TelaPrincipal.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -44,41 +43,35 @@
                   <Insets />
                </VBox.margin>
             </MenuBar>
-            <ToolBar maxHeight="328.0" minHeight="80.0" prefHeight="96.0" prefWidth="485.0" style="-fx-background-color: #C4525A;">
-              <items>
-                <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#clkCadArtista" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #47313B;" text="Artistas" textAlignment="CENTER" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                </Button>
-                <Button mnemonicParsing="false" onAction="#clkCadGenero" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #47313B;" text="Gêneros" textAlignment="CENTER" textFill="WHITE" wrapText="true">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                </Button>
-                  <Button mnemonicParsing="false" onAction="#clkCadMusicas" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #47313B;" text="Músicas" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <HBox alignment="CENTER" minHeight="80.0" prefHeight="96.0" prefWidth="845.0" spacing="10.0" style="-fx-background-color: #400100;">
+               <children>
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#clkCadArtista" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #73311D;" text="Artistas" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#clkCadTipoArtista" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #47313B;" text="Tipos de Artista" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                  <Button mnemonicParsing="false" onAction="#clkCadGenero" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #73311D #73311D;" text="Gêneros" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#clkCadAlbum" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #47313B;" text="Álbum" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                  <Button mnemonicParsing="false" onAction="#clkCadMusicas" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #73311D;" text="Músicas" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-              </items>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </ToolBar>
+                  <Button mnemonicParsing="false" onAction="#clkCadTipoArtista" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #73311D;" text="Tipos de Artista" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#clkCadAlbum" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #73311D;" text="Álbum" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
          </children>
          <BorderPane.margin>
             <Insets />
