Tela Cad Musica ALbum
Tela para cadastrar musica em album normal ou personalizado.

--- a/src/albunsfx/PesqAlbum.fxml
+++ b/src/albunsfx/PesqAlbum.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="546.0" prefWidth="866.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="44.0" prefWidth="866.0" BorderPane.alignment="CENTER">
@@ -32,8 +31,8 @@
          <children>
             <HBox alignment="CENTER" prefHeight="208.0" prefWidth="866.0" spacing="20.0" style="-fx-background-color: #DDDDDD;">
                <children>
-                  <Button contentDisplay="CENTER" mnemonicParsing="false" prefWidth="90.0" text="Confirmar" />
-                  <Button contentDisplay="CENTER" mnemonicParsing="false" prefWidth="90.0" text="Cancelar" />
+                  <Button fx:id="btconfirmar" contentDisplay="CENTER" mnemonicParsing="false" onAction="#clkCadAlbumMusica" prefWidth="90.0" text="Confirmar" />
+                  <Button fx:id="btcancelar" contentDisplay="CENTER" mnemonicParsing="false" prefWidth="90.0" text="Cancelar" />
                </children>
             </HBox>
          </children>
@@ -42,10 +41,10 @@
    <center>
       <TableView prefHeight="425.0" prefWidth="866.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn prefWidth="67.0" text="Id" />
-          <TableColumn prefWidth="516.0" text="Título" />
-            <TableColumn prefWidth="180.0" text="Artista" />
-            <TableColumn prefWidth="102.0" text="Rating" />
+          <TableColumn fx:id="colid" prefWidth="67.0" text="Id" />
+          <TableColumn fx:id="coltitulo" prefWidth="516.0" text="Título" />
+            <TableColumn fx:id="colartista" prefWidth="180.0" text="Artista" />
+            <TableColumn fx:id="colrating" prefWidth="102.0" text="Rating" />
         </columns>
       </TableView>
    </center>
