--- a/src/albunsfx/TelaPrincipal.fxml
+++ b/src/albunsfx/TelaPrincipal.fxml
@@ -29,8 +29,8 @@
                 </Menu>
                   <Menu mnemonicParsing="false" text="Álbum">
                     <items>
-                      <MenuItem mnemonicParsing="false" text="Novo Álbum Original" />
-                        <MenuItem mnemonicParsing="false" text="Novo Álbum Personalizado" />
+                      <MenuItem mnemonicParsing="false" onAction="#clkCadAlbumMusica" text="Novo Álbum Original" />
+                        <MenuItem mnemonicParsing="false" onAction="#clkCadAlbumMusica" text="Novo Álbum Personalizado" />
                         <MenuItem mnemonicParsing="false" onAction="#clkPesqAlbum" text="Abrir Álbum Original" />
                         <MenuItem mnemonicParsing="false" onAction="#clkPesqAlbum" text="Abrir Álbum Personalizado" />
                     </items>
@@ -58,22 +58,22 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#clkCadGenero" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #7D253B;" text="Gêneros" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#clkCadGenero" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #7D253B;" text="Gêneros" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#clkCadMusicas" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #7D253B;" text="Músicas" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#clkCadMusicas" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #7D253B;" text="Músicas" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#clkCadTipoArtista" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #7D253B;" text="Tipos de Artista" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#clkCadTipoArtista" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #7D253B;" text="Tipos de Artista" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-                  <Button mnemonicParsing="false" onAction="#clkCadAlbum" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #7D253B;" text="Álbum" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#clkCadAlbum" prefHeight="50.0" prefWidth="85.0" style="-fx-background-color: #7D253B;" text="Álbum" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
